# smart-digital-clock-esp32c3

./: CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  alarm_task.c  alarm_task.h  app_state.c  app_state.h  ble_alarm.c  ble_alarm.h  button.c  button.h  buzzer.h  display.c  display.h  led.h  main.c  sensor_dht.c  sensor_dht.h  time_svc.c  time_svc.h  wifi.c  wifi.h
